<resources>
    <!-- Genericos -->
    <string name="app_name">Info Refugios</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- DrawerLayout -->
    <string name="acerca_de">Acerca de</string>
    <string name="com.crashlytics.useFirebaseAppId">true</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrar">Registrar</string>
    <string name="email">E-mail</string>
    <string name="clave">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="repetir_clave">Repetir Contraseña</string>
    <string name="title_activity_maps">Map</string>
    <string name="entrar">entrar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="perfil">Perfil</string>
    <string name="inicie_sesion">Inicie sesión</string>
    <string name="cambiar_clave">Cambiar contraseña</string>
    <string name="cambiar_nombre">Cambiar nombre</string>
    <string name="informacion">Información</string>
    <string name="refugios">Refugios</string>
    <string name="fotos">Fotos</string>
    <string name="insertar_clave">Inserta la contraseña</string>
    <string name="clave_incorrecta">Contraseña incorrecta</string>
    <string name="clave_no_coinciden">Las contraseñas no coinciden</string>
    <string name="clave_min_caracteres">La contraseña debe de tener mínimo 9 caracteres</string>
    <string name="inserta_nombre">Inserta el nombre</string>
    <string name="correo_no_valido">Email no válido</string>
    <string name="nombre_cambiado">Nombre cambiado</string>
    <string name="error_cambiar_nombre">Error al cambiar nombre</string>
    <string name="clave_cambiada">Contraseña cambiada</string>
    <string name="error_cambiar_clave">Error al cambiar contraseña</string>
    <string name="comentario">Escribe un comentario</string>
    <string name="enviar">Enviar</string>
    <string name="clima">Clima</string>
    <string name="usuario_no_insertar">Usuario no se pudo insertar</string>
    <string name="usuario_registrado">Usuario registrado con éxito</string>
    <string name="usuario_no_registrado">Usuario no se pudo registrar</string>
    <string name="rutas">Rutas</string>
    <string name="comentarios">Comentarios</string>
    <string name="mapa_refugios">Mapa de refugios</string>
    <string name="lista_refugios">Lista de refugios</string>
    <string name="cargando_refugios">Cargando refugios</string>
    <string name="cargando_sierras">Cargando sierras</string>
    <string name="credenciales_incorrectas">Credenciales incorrectas</string>
    <string name="clima_en">Clima en</string>
    <string name="velocidad">Velocidad</string>
    <string name="viento">Viento</string>
    <string name="presion">Presión</string>
    <string name="humedad">Humedad</string>
    <string name="amanecer">Amanecer</string>
    <string name="puesta_sol">Puesta de sol</string>
    <string name="geo_coords">Coords. geo.</string>
    <string name="hoy">HOY</string>
    <string name="cinco_dias">5 DÍAS</string>
    <string name="clima_cinco_dias">PRONÓSTICO DEL TIEMPO DE 5 DÍAS</string>
    <string name="desarrollador">Desarrollador</string>
    <string name="departamento_informatica">Departamento de informática</string>
    <string name="proyecto_de">Proyecto de</string>
    <string name="asignatura">Desarrollo de aplicaciones multiplataforma</string>
    <string name="aplicacion">Aplicación</string>


</resources>
