<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:gravity="center_horizontal"
    tools:context=".weather.HoyWeatherFragment">

    <!-- TODO: Landscape de el tiempo -->

    <LinearLayout
        android:id="@+id/panel_weather"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_nombre_sierra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="Weather in Sierra Nevada"
            android:textColor="@color/caquiOscuro" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_weather"
                android:src="@mipmap/ic_launcher"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <TextView
                android:id="@+id/txt_temperatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="50sp"
                android:textStyle="bold"
                android:text="14 C"
                android:textColor="@color/caquiOscuro" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="Weather in Sierra Nevada"
            android:textColor="@color/caquiOscuro" />

        <TextView
            android:id="@+id/txt_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="Weather in Sierra Nevada"
            android:textColor="@color/caquiOscuro" />
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:stretchColumns="*"
            android:padding="16dp"
            android:background="@drawable/border">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/viento"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:id="@+id/txt_wind"
                    android:text="Speed: 1 Deg: 1"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/presion"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:id="@+id/txt_pressure"
                    android:text="1013.75 hpa"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/humedad"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:id="@+id/txt_humidity"
                    android:text="100%"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/amanecer"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:id="@+id/txt_sunrise"
                    android:text="11:00"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/puesta_sol"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:id="@+id/txt_sunset"
                    android:text="18:00"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/geo_coords"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:id="@+id/txt_geo_coord"
                    android:text="[32.0,-81.0]"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>
    
    <ProgressBar
        android:id="@+id/loading_weather"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>