<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".sierras.SierraFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        >
        
        <RelativeLayout
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/caqui"
                >
                    <TextView
                        android:id="@+id/textView_nombreSierra"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sierra Nevada"
                        android:textSize="22dp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />
            </android.support.v7.widget.CardView>
            
        </RelativeLayout>
        
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:columnCount="2"
            android:rowCount="2"
            android:background="@color/grisClaro"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:padding="14dp">

            <!-- Fila nº1 -->
            <android.support.v7.widget.CardView
                android:id="@+id/cardView_infoSierra"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="30dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView_infoSierra"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_informacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView_infoSierra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/informacion"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView_refugioSierra"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="30dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView_refugioSierra"
                        android:src="@drawable/ic_refugio"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView_refugioSierra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refugios"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Fila nº2 -->
            <android.support.v7.widget.CardView
                android:id="@+id/cardView_fotosSierras"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView_fotosSierra"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_foto"/>

                    <TextView
                        android:id="@+id/textView_fotosSierra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fotos"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView_climaSierra"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView_climaSierra"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_weather_m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView_climaSierra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clima"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </GridLayout>

    </LinearLayout>

</FrameLayout>